syntax = "proto3";
package reputation.rpc;

option go_package = "rpc";

message MinerScore {
    string addr = 1;
    int32 score = 2;
}

message Index {
    string tipSetKey = 1;
    map<string, Slashes> miners = 2;
}

message Slashes {
    repeated uint64 epochs = 1;
}

message AddSourceRequest {
    string id = 1;
    string maddr = 2;
}

message AddSourceReply {
}

message GetTopMinersRequest {
    int32 limit = 1;
}

message GetTopMinersReply {
    repeated MinerScore topMiners = 1;
}

service RPC {
    rpc AddSource(AddSourceRequest) returns (AddSourceReply) {}
    rpc GetTopMiners(GetTopMinersRequest) returns (GetTopMinersReply) {}
}
